# ClayMan

./: CMakeLists.txt  LICENSE.md  Readme.md  clayman.cpp  clayman.hpp
examples/advanced-use-example/: advanced-use-example.cpp
examples/full-example/: full-example.cpp
examples/quick-example/: quick-example.cpp
examples/readme-example/: readme-example.cpp
examples/sdl2-example/: sdl2-example.cpp
examples/sdl3-example/: sdl3-example.cpp
examples/separate-sources-example/: layout.cpp  layout.hpp  separate-sources-example.cpp
include/raylib/: clay_renderer_raylib.c  clay_renderer_raylib_old.c
include/sdl2/: clay_renderer_SDL2.c  clay_renderer_SDL2_old.c
include/sdl3/: clay_renderer_SDL3.c  clay_renderer_SDL3.cpp  clay_renderer_SDL3_old.c
logs/: %EXE_NAME%.txt
scripts/: checkRunning.bat  runAllExamples.bat
shortcuts/: advanced-use-example.exe.lnk  full-example.exe.lnk  quick-example.exe.lnk  readme-example.exe.lnk  sdl2-example.exe.lnk  sdl3-example.exe.lnk  separate-sources-example.exe.lnk
